--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="hero__button"> <a href="./pages/nuevosingresos.html">Ir a productos</a></button>
           
         </div>
-
+      </section>
 
 
         <!-- pie de pagina -->
