cambios en las paginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Bismillah</a>
+          <a class="navbar-brand" href="./index.html"> <img src="./assest/img/ligero (1).png" alt=""> Bismillah</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,7 +39,7 @@
         <div class="hero__text">
 
            <h1>NUEVA TEMPORADA</h1>
-           <h2>PRIMAVERA/VERANO</h2>
+           <h2>Primavera / Verano</h2>
 
         <button class="hero__button"> <a href="./pages/nuevosingresos.html">Ir a productos</a></button>
           
