--- a/pages/nuevosingresos.html
+++ b/pages/nuevosingresos.html
@@ -18,7 +18,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pages/calzado.html">Calzado</a>
+                <a class="nav-link active" aria-current="page" href="../pages/calzado.html">Calzado</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/mujer.html">Sección Mujer</a>
