--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="hero">
         <div class="hero__text">
 
-           <h1>NUEVA TEMPORADA</h1>
+           <h1 class="titulo">NUEVA TEMPORADA</h1>
            <h2>Primavera / Verano</h2>
 
         <button class="hero__button"> <a href="./pages/nuevosingresos.html">Ir a productos</a></button>
@@ -53,7 +53,7 @@
         <footer class="pie-pagina">
           <div class="header">
         <div class="logo">
-          <img src="../assest/img/ligero (1).png" alt="">
+          <img src="./assest/img/ligero (1).png" alt="">
         </div>
         
         <hr>
