modificaiones en en index

--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
     
-    <title>Seccion Mujer</title>
+    <title>Bismillah | Ropa/Accesorios de Mujer</title>
 </head>
 <body>
 
@@ -34,7 +34,7 @@
         </div>
       </nav>
       
-<h1>SECCION MUJER</h1>
+<h2 class="titulo">SECCION MUJER</h2>
 <hr>
       <div class="card-group">
         <div class="card">
