--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/styles.css">
-    <title>Bismillah/Sección Hombre</title>
+    <title>Bismillah | Ropa y Accesorios de Hombre</title>
 </head>
 <body>
 
@@ -40,7 +40,7 @@
           <!-- MUESTRA DE PRODUCTOS -->
           <main>
 
-            <h1>SECCIÓN HOMBRE</h1>
+            <h2 class="titulo">SECCIÓN HOMBRE</h2>
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                   <div class="card">
