--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    
+    <meta name="description" content="Indumentaria femenina, variedad en talles y colores.">
     <title>Bismillah | Ropa/Accesorios de Mujer</title>
 </head>
 <body>
