agregado de seo

--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/styles.css">
 
-  <meta name="description" content="Calzados a partir del talle 36. Variedad en modelos y talles">
+  <meta name="description" content="Calzados a partir del talle 36. Variedad en modelos">
 
   <title>Bismillah/Calzado</title>
 </head>
